updated .vscodeignore for packaging extension

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,11 +1,18 @@
 .vscode/**
 .vscode-test/**
+.git/**
 out/test/**
 src/**
-.gitignore
-vsc-extension-quickstart.md
+test/**
+
 **/tsconfig.json
 **/.eslintrc.json
 **/*.map
 **/*.ts
+**/*.vsix
+**/*.md
+**/*.txt
+
 images/file-browser.gif
+vsc-extension-quickstart.md
+.gitignore
