--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -15,6 +15,19 @@
 				"kind": "build",
 				"isDefault": true
 			}
+		},
+		{
+			"label":"update vsce",
+			"type": "shell",
+			"command": "npm install -g vsce"
+		},
+		{
+			"label": "package the extension",
+			"type":"shell",
+			"command": "vsce package",
+			"group": "build",
+			"isBackground": false,
+			"dependsOn":"update vsce"
 		}
 	]
 }
