--- a/package.json
+++ b/package.json
@@ -130,7 +130,7 @@
         ]
     },
     "scripts": {
-        "vscode:prepublish": "npm run compile",
+        "vscode:prepublish": "prepublish.sh && npm run compile",
         "compile": "tsc -p ./",
         "lint": "eslint src --ext ts",
         "watch": "tsc -watch -p ./",
@@ -150,7 +150,7 @@
         "mocha": "^8.1.1",
         "typedoc": "^0.23.15",
         "typescript": "^4.0.2",
-        "vscode-test": "^1.4.0"
+        "@vscode/test-electron": "^1.4.0"
     },
     "dependencies": {
         "drivelist": "^11.0.0",
